new feature to add docs using create-if-non-exist / docproc with updates